<resources>
    <string name="settings_dialog_unidad_temperatura">Unidad de Temperatura</string>
    <string name="settings_dialog_titulo_ajustes_por_defecto">¿Resetear los Ajustes?</string>
    <string name="settings_dialog_mensaje_ajustes_por_defecto">Se pondran todos los ajustes por defecto de fabrica\n</string>
    <string name="settings_dialog_tema">Tema de la Aplicación</string>
    <string name="perfil_dialog_titulo_cerrar_sesion">¿Cerrar Sesión?</string>


    <string name="signup_toast_correo_en_uso">El correo ya esta en uso</string>
    <string name="signup_toast_binevenido">Bienvenido</string>
    <string name="profile_toast_cambios_actualizados">Cambios Actualizados</string>
    <string name="profile_toast_usuario_borrado">Usuario Borrado</string>
    <string name="details_toast_planta_regandose">Planta regandose</string>
    <string name="details_toast_nombre_cambiado">Nombre cambiado</string>
    <string name="details_toast_usuario_actualizado">Usuario actualizado</string>
    <string name="details_toast_maceta_borrada">Maceta Borrada</string>
    <string name="details_toast_maceta_actualizada">Maceta actualizada</string>
    <string name="country_toast_pais_no_cambiado">Pais no se ha cambiado</string>
    <string name="country_toast_no_poder_conectar">No se ha podido conectar</string>
    <string name="country_toast_minimo_caracteres">Necesitas mínimo caracteres para buscar</string>
    <string name="addflowerpotview_toast_maceta_no_anadida">Maceta no añadida</string>
    <string name="addflowerpotview_toast_wifi_habitual">Por favor conectese a su wifi habitual</string>

    <string name="perfil_toast_contrasena_repetir_incorrecta">Las contraseñas nuevas no coinciden</string>
    <string name="perfil_toast_contrasena_nueva_incorrecta">La contraseña nueva no es valida</string>
    <string name="perfil_toast_contrasena_actual_incorrecta">La contraseña actual no es correcta</string>
    <string name="perfil_dialog_titulo_apellidos">Cambiar Apellidos</string>
    <string name="perfil_dialog_titulo_nombre">Cambiar Nombre</string>
    <string name="perfil_dialog_titulo_username">Cambiar UserName</string>
    <string name="perfil_dialog_titulo_email">Cambiar Email</string>
    <string name="perfil_dialog_titulo_cambiar_contrasena">Cambiar Contraseña</string>
    <string name="perfil_dialog_et_contrasena_actual_hint">Contraseña Actual</string>
    <string name="perfil_dialog_et_nueva_contrasena_hint">Nueva Contraseña</string>
    <string name="perfil_dialog_et_repetir_contrasena_hint">Repetir Contraseña</string>


    <string name="perfil_dialog_mensaje_cerrar_sesion">Esto cerrara su sesión y le llevara al login\n</string>
    <string name="perfil_dialog_cancelar">Cancelar</string>
    <string name="settings_dialog_confirmar">Confirmar</string>
    <string name="perfil_dialog_titulo_borrar_cuenta">¿Borrar cuenta?</string>
    <string name="perfil_dialog_mensaje_borrar_cuenta">Aviso:\nAl borrar tu cuenta se borrarán todos los datos de forma permanente y no se podrán recuperar.\n</string>
    <string name="app_name">Gardenia</string>
    <string name="perfil_dialog_confirmar">Aceptar</string>
    <string name="perfil_dialog_borrar">Borrar</string>
    <string name="signup">¿No tienes una cuenta? Registrate aquí</string>
    <string name="forgot_password">¿Olvidaste la contraseña?</string>
    <string name="remind_me">Recuerdame</string>
    <string name="login">Login</string>
    <string name="password">Contraseña</string>
    <string name="email">Email</string>
    <string name="login_error">Error, usuario o contraseña incorrectos</string>
    <string name="repeat_password">Repetir contraseña</string>
    <string name="singup">Sign up</string>
    <string name="code_verify">Código de verificación</string>
    <string name="reset_password">Resetear contraseña</string>
    <string name="understand">¡Entendido!</string>
    <string name="email_send">Recuperar contraseña</string>
    <string name="email_message">A continuación se enviará un email a tu dirección de correo electrónico con el código de verificación. Recuerda revisar tu bandeja de spam. Si surge algún problema no dudes en ponerte en contacto con nosotros a traves del siguiente correo electrónico:</string>
    <string name="gardenia_email">gardenia@gmail.com</string>
    <string name="perfil_email">Email</string>
    <string name="perfil_email_editable">johndoemurphy@email.com</string>
    <string name="perfil_nombre_usuario">UserName</string>
    <string name="perfil_nombre">Nombre</string>
    <string name="perfil_nombre_usuario_titulo">Usuario</string>
    <string name="perfil_apellidos">Apellidos</string>
    <string name="perfil_cambiar_contrasena">Cambiar Contraseña</string>
    <string name="perfil_pais">País</string>
    <string name="perfil_configuracion">Configuración</string>
    <string name="perfil_cerrar_sesion">Cerrar Sesion</string>
    <string name="perfil_borrar_cuenta">Borrar Cuenta</string>
    <string name="perfil_pais_ejemplo">Spain</string>
    <string name="country_buscador_editable">Buscar un pais</string>
    <string name="settings_unidad_temperatura">Unidad de Temperatura</string>
    <string name="setting_UnidadesTemperaturaEjemplo">ºC</string>
    <string name="settings_notificaciones">Notificaciones</string>
    <string name="settings_tema">Tema</string>
    <string name="settings_tema_editable">Claro</string>
    <string name="settings_preguntas_frecuentes">Preguntas Frecuentes</string>
    <string name="settings_reportar_fallo">Reportar un fallo</string>
    <string name="settings_ajustes_por_defecto">Ajustes por defecto</string>
    <string name="faq_preguntas_frecuentes">Preguntas Frecuentes</string>
    <string name="faq_pregunta1">1) ¿Como conecto una maceta?</string>
    <string name="faq_respuesta1">Para conectar una maceta deberás pulsar el  botón "+" situado arriba a la derecha en la  ventana inicial</string>
    <string name="faq_pregunta2">2)¿Cómo puedo borrar mi cuenta?</string>
    <string name="faq_respuesta2">Para borrar tu cuenta deberas pulsar el botón del perfil y luego pulsar en borrar cuenta y confirmar</string>
    <string name="faq_pregunta3">3) ¿Cómo puedo cambiar de contraseña?</string>
    <string name="faq_respuesta3">Para cambiar la contraseña entra en tu perfil  y pulsa la opción cambiar contraseña</string>
    <string name="faq_pregunta4">4) ¿Cómo puedo cerrar mi sesión?</string>
    <string name="faq_respuesta4">Para cerrar la sesión deberás pulsar en el  botón de perfil y luego pulsar en la opción  cerrar sesión</string>
    <string name="faq_pregunta5">5) ¿Cómo puedo cambiar mi correo  electrónico?</string>
    <string name="faq_respuesta5">Se puede cambiar el correo electrónico y los  datos personales del usuario en el perfil</string>
    <string name="fail_report_titulo">Reportar un Fallo</string>
    <string name="fail_report_dar_gracias">Gracias por colaborar en el desarrollo de  Gardenia, valoramos mucho tu esfuerzo,  tiempo y ganas de que la aplicación mejore!</string>
    <string name="fail_report_preguntas">A continuación comentanos el error que te  ha ocurrido con una breve explicación de lo  que estabas haciendo antes de que  surgiese, si estas falto de ideas te recomendamos responder a las siguientes preguntas:</string>
    <string name="fail_report_pregunta1">¿En que ventana surgió el error?</string>
    <string name="fail_report_pregunta2">¿Qué seleccionaste?</string>
    <string name="fail_report_pregunta3">¿Qué hiciste antes de que surgiese el error?</string>
    <string name="fail_report_descripcion_fallo">Escriba su fallo</string>
    <string name="fail_report_boton">Enviar Reporte</string>
    <string name="title_activity_navegation_drawer">NavegationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--strings detalles -->
    <string name="nombre_maceta_detalle">Maceta del salón</string>
    <string name="detalles">Detalles</string>
    <string name="humedad_tierra">Humedad de la tierra</string>
    <string name="temperatura_ambiental">Temperatura ambiental</string>
    <string name="humedad_ambiental">Humedad ambiental</string>
    <!-- /strings detalles -->

    <!--strings elegir imagenes -->
    <string name="elige_imagen">Elige una imagen</string>
    <!-- /strings elegir imagenes -->

    <!--strings agregar maceta -->
    <string name="pasos_para_agregar_maceta">Añadir una maceta</string>
    <string name="paso1">1) Conecte la maceta y asegurase de que el
        LED de encendido se encuentre iluminado</string>
    <string name="paso2">2) Asegurese de la Wi-Fi del hogar se encuentra encendida y disponible</string>
    <string name="paso3">3) Asegurese de que el Wi-Fi en su dispositivo móvil se encuentra encendidon</string>
    <string name="paso4">4) Seleccione la red Wi-Fi generada por el dispositivo con el nombre Garden.ia (la red Wi-Fi puede tardar hasta 1 o 2 minutos en aparecer)</string>
    <string name="confirmar">Confirmar</string>
    <string name="escaneo_wifi">Escaneando WIFI</string>
    <string name="wifi_desactivada">La WIFI esta desactivada, por favor activala</string>
    <string name="wifi_actualizada">Lista de WIFI actualizada</string>
    <!-- /strings agregar maceta -->

    <!-- Menu -->
    <string name="home">Home</string>
    <string name="datos">Datos</string>
    <string name="perfil">Perfil</string>
    <string name="configuracion">Configuración</string>
    <string name="conectar_maceta">Conectar maceta</string>
    <string name="paises">Paises</string>
    <string name="preguntas">Preguntas</string>
    <string name="reportar_fallo">Reportar fallo</string>
    <string name="regar">Regar</string>
    <string name="escribir_fallo">Escriba aqui su fallo</string>
    <!-- /Menu -->

    <!-- Dialogs -->
    <string name="cambiar_nombre_maceta">Cambiar nombre</string>
    <string name="cambiar_nombre_maceta_texto">Introduzca el nuevo nombre para su dispositivo</string>
    <string name="details_borrar_maceta_titulo">Borrar maceta</string>
    <string name="details_borrar_maceta_mensaje">Aviso: Esto borrará la maceta de su cuenta</string>

    <!-- Toast -->
    <string name="toast_bienvenido">Bienvenid@</string>
    <string name="temperatura_actualizada">Configuración actualizada</string>
</resources>
